k8s/network-policies/allow-discovery.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-discovery
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: service-discovery
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8761
